--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,260 @@
-PyPDF2
-pdfplumber
-nlp
-docx2txt
-scikit-learn
-spacy==2.3.5
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
-nltk
-pyresparser
-gensim
-statsmodels
-plotly
-seaborn
-matplotlib
-patsy
-pandas
+absl-py==1.4.0
+adjustText==0.8
+alabaster==0.7.13
+altair==5.1.1
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.8
+astunparse==1.6.3
+async-generator==1.1
+atomicwrites==1.4.1
+attrs==22.1.0
+auxlib==0.0.43
+azure-functions==1.11.2
+azure-iot-device==2.12.0
+Babel==2.12.0
+backcall==0.2.0
+bayescd==0.4
+bayesian-changepoint-detection==0.2.dev1
+beautifulsoup4==4.11.1
+black==23.1.0
+bleach==5.0.1
+blinker==1.6.2
+boto3==1.28.14
+botocore==1.31.14
+cachetools==5.3.1
+certifi==2022.12.7
+cffi==1.15.1
+changepy==0.3.1
+charset-normalizer==3.0.1
+click==8.1.3
+cloudpickle==2.2.1
+cmdstanpy==1.1.0
+colorama==0.4.5
+colourmap==1.1.16
+contourpy==1.0.7
+convertdate==2.4.0
+copulas==0.9.0
+ctgan==0.7.4
+curio==1.6
+cycler==0.11.0
+Cython==3.0.0
+databricks-cli==0.17.7
+datazets==0.1.8
+debugpy==1.6.3
+decorator==5.1.1
+deepecho==0.4.2
+defusedxml==0.7.1
+deprecation==2.1.0
+distlib==0.3.7
+docopt==0.6.2
+docutils==0.19
+entrypoints==0.4
+ephem==4.1.4
+et-xmlfile==1.1.0
+exceptiongroup==1.1.0
+executing==1.1.0
+Faker==14.2.1
+fastjsonschema==2.16.2
+filelock==3.12.3
+flatbuffers==23.5.26
+fonttools==4.38.0
+forex-python==1.8
+gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.37
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+graphviz==0.20.1
+grpcio==1.56.2
+h5py==3.9.0
+holidays==0.29
+idna==3.4
+imagesize==1.4.1
+imbalanced-learn==0.11.0
+imblearn==0
+importlib-metadata==5.0.0
+importlib-resources==5.12.0
+iniconfig==2.0.0
+ipykernel==6.16.0
+ipyparallel==8.4.1
+ipython==8.5.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.2
+janus==1.0.0
+jedi==0.18.1
+Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.2.0
+jovian==0.2.47
+jsonschema==4.16.0
+jupyter==1.0.0
+jupyter_client==7.3.5
+jupyter-console==6.4.4
+jupyter-core==4.11.1
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.3
+keras==2.13.1
+kiwisolver==1.4.4
+libclang==16.0.6
+llvmlite==0.41.0
+LunarCalendar==0.0.9
+Markdown==3.4.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.1
+matplotlib==3.7.0
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==2.0.4
+mpmath==1.3.0
+mypy-extensions==1.0.0
+nbclient==0.7.0
+nbconvert==7.2.1
+nbformat==5.6.1
+nest-asyncio==1.5.6
+networkx==3.1
+notebook==6.4.12
+numba==0.58.0
+numpy==1.25.2
+oauthlib==3.2.2
+openpyxl==3.1.2
+opt-einsum==3.3.0
+outcome==1.2.0
+packaging==23
+paho-mqtt==1.6.1
+pandas==1.5.0
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.11.0
+patsy==0.5.3
+pca==2.0.5
+pickleshare==0.7.5
+Pillow==9.4.0
+pip==23.2.1
+pipenv==2023.9.7
+pipreqs==0.4.13
+platformdirs==3.10.0
+plotly==5.15.0
+plotly-express==0.4.1
+pluggy==1.0.0
+pmdarima==2.0.3
+prometheus-client==0.14.1
+prompt-toolkit==3.0.31
+prophet==1.1.4
+protobuf==4.23.4
+psutil==5.9.2
+pure-eval==0.2.2
+py==1.11.0
+py4j==0.10.9.7
+pyarrow==13.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydeck==0.8.1b0
+pydot==1.4.2
+pydotplus==2.0.2
+Pygments==2.13.0
+PyJWT==2.7.0
+PyMeeus==0.5.12
+pyodbc==4.0.34
+pyparsing==3.0.9
+pyrsistent==0.18.1
+PySocks==1.7.1
+pyspark==3.4.0
+pytest==7.0.1
+pytest-asyncio==0.20.3
+python-dateutil==2.8.2
+python-http-client==3.3.7
+pytz==2022.4
+pywin32==304
+pywinpty==2.0.8
+PyYAML==6.0.1
+pyzmq==24.0.1
+qtconsole==5.3.2
+QtPy==2.2.1
+rdt==1.6.0
+requests==2.28.2
+requests-oauthlib==1.3.1
+requests-unixsocket==0.3.0
+rich==13.5.3
+rsa==4.9
+rstr==3.2.1
+ruptures==1.1.8
+s3transfer==0.6.1
+scatterd==1.3.7
+scikit-learn==1.2.2
+scikit-plot==0.3.7
+scipy==1.11.1
+sdmetrics==0.10.1
+sdv==1.2.1
+seaborn==0.12.2
+Send2Trash==1.8.0
+sendgrid==6.10.0
+setuptools==68.2.0
+setuptools-git==1.2
+shap==0.42.1
+simplejson==3.19.1
+six==1.16.0
+sklearn==0.0.post1
+slicer==0.0.7
+smmap==5.0.1
+sniffio==1.3.0
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+Sphinx==6.1.3
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+stack-data==0.5.1
+starkbank-ecdsa==2.2.0
+statsmodels==0.14.0
+streamlit==1.27.0
+sympy==1.12
+synthesized==2.7
+synthesized-insight==0.7
+tabulate==0.9.0
+tenacity==8.2.2
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-intel==2.13.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+terminado==0.16.0
+testpath==0.6.0
+threadpoolctl==3.1.0
+tinycss2==1.1.1
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+torch==2.0.1
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.4.0
+treeinterpreter==0.2.3
+trio==0.22.0
+typing_extensions==4.7.1
+tzdata==2023.3
+tzlocal==5.0.1
+urllib3==1.26.14
+uuid==1.3
+validators==0.22.0
+virtualenv==20.24.4
+watchdog==3.0.0
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.3.6
+wheel==0.41.0
+widgetsnbextension==4.0.3
+wordcloud==1.8.2.2
+wrapt==1.15.0
+yamale==4.0.4
+yarg==0.1.9
+yellowbrick==1.5
+zipp==3.8.1
